fixed layout issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,8 @@
   padding: 15px;
   margin-top: 100px;
   color: #e75b5c;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 .contact-page h3{
   padding: 15px;
